test_programs/compile_failure/noirc_frontend_tests_check_trait_duplicate_declaration/src/main.nr

    trait Default2 {
        fn default(x: Field, y: Field) -> Self;
    }

    struct Foo {
        bar: Field,
        array: [Field; 2],
    }

    impl Default2 for Foo {
        fn default(x: Field,y: Field) -> Self {
            Self { bar: x, array: [x,y] }
        }
    }

    trait Default2 {
        fn default(x: Field) -> Self;
    }

    fn main() {
    }
    